<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zoomtk.circle.view.NoViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#999999" />

    <RadioGroup
        android:id="@+id/index_rg"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.zoomtk.circle.view.MyRadioButton
                android:id="@+id/rb_microstore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:gravity="center_horizontal|bottom"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/microstore"
                android:textColor="@color/selector_rb_microstore_tv"
                android:textSize="12sp"
                app:drawablesize="25dp"
                app:drawabletop="@drawable/selector_rb_microstore" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.zoomtk.circle.view.MyRadioButton
                android:id="@+id/rb_discover"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:button="@null"
                android:gravity="center_horizontal|bottom"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/discover"
                android:textColor="@color/selector_rb_microstore_tv"
                android:textSize="12sp"
                app:drawablesize="22dp"
                app:drawabletop="@drawable/selector_rb_discover" />

            <TextView
                android:id="@+id/index_discover_circle"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginLeft="-8dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/rb_discover"
                android:background="@drawable/shape_prompt_circle_red" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.zoomtk.circle.view.MyRadioButton
                android:id="@+id/rb_circle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:button="@null"
                android:gravity="center_horizontal|bottom"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/circle"
                android:textColor="@color/selector_rb_microstore_tv"
                android:textSize="12sp"
                app:drawablesize="25dp"
                app:drawabletop="@drawable/selector_rb_circle" />

            <TextView
                android:id="@+id/index_circle_circle"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="-12dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/rb_circle"
                android:background="@drawable/shape_prompt_circle_red"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="8sp"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.zoomtk.circle.view.MyRadioButton
                android:id="@+id/rb_myinfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:button="@null"
                android:gravity="center_horizontal|bottom"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/myinfo"
                android:textColor="@color/selector_rb_microstore_tv"
                android:textSize="12sp"
                app:drawablesize="25dp"
                app:drawabletop="@drawable/selector_rb_myinfo" />
        </RelativeLayout>
    </RadioGroup>
</LinearLayout>