<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height_48dp"
        android:background="@color/title_bg"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/title_bg"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/circle_rb_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_circle_rb"
                android:button="@null"
                android:gravity="center"
                android:text="@string/message"
                android:textColor="@color/title_txt"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/circle_rb_trends"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_circle_rb"
                android:button="@null"
                android:gravity="center"
                android:text="圈子秀"
                android:textColor="@color/title_txt"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/circle_rb_circle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_circle_rb"
                android:button="@null"
                android:gravity="center"
                android:text="@string/circle"
                android:textColor="@color/title_txt"
                android:textSize="16sp" />

        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/title_bg">

            <LinearLayout
                android:id="@+id/ll_upload"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal">
                <ProgressBar
                    android:layout_height="20dp"
                    android:layout_width="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="圈子秀发表中..."
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textColor="@color/title_txt"
                    />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/circle_menu"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center">

                <Button
                    android:layout_width="@dimen/button_size_small"
                    android:layout_height="@dimen/button_size_small"
                    android:background="@mipmap/add"
                    android:visibility="visible"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/circle_publish_trends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:paddingRight="10dp"
                android:text="发布"
                android:textColor="@color/title_txt"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/circle_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:text="@string/create"
                android:textColor="@color/title_txt"
                android:textSize="16sp"
                android:visibility="gone"/>
        </RelativeLayout>

    </LinearLayout>
    <com.zoomtk.circle.view.ThreeViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></com.zoomtk.circle.view.ThreeViewPager>
</LinearLayout>