<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height_48dp"
        android:background="@color/title_bg">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/image_size_medium"
            android:layout_height="@dimen/image_size_medium"
            android:padding="15dp"
            android:src="@mipmap/title_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/store_manage"
            android:textColor="@color/title_txt"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/store_name"
                    android:textColor="@color/c5cc"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/right_arrow1"
                    android:layout_width="@dimen/image_size_small"
                    android:layout_height="@dimen/image_size_small"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/right" />

                <TextView
                    android:id="@+id/store_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@id/right_arrow1"
                    android:text=""
                    android:textColor="#a6a6a6"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/truename"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="真实名字"
                    android:textColor="@color/c5cc"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_right_arrow1"
                    android:layout_width="@dimen/image_size_small"
                    android:layout_height="@dimen/image_size_small"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/right" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@id/iv_right_arrow1"
                    android:text=""
                    android:textColor="#a6a6a6"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/edit_abstract"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/store_abstract"
                    android:textColor="@color/c5cc"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/right_arrow2"
                    android:layout_width="@dimen/image_size_small"
                    android:layout_height="@dimen/image_size_small"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/right" />

                <TextView
                    android:id="@+id/store_abstract"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@id/right_arrow2"
                    android:text="未设置"
                    android:textColor="#a6a6a6"
                    android:textSize="16sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/edit_cover"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="联系电话"
                    android:textColor="@color/c5cc"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/right_arrow5"
                    android:layout_width="@dimen/image_size_small"
                    android:layout_height="@dimen/image_size_small"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/right" />

                <TextView
                    android:id="@+id/store_cover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@id/right_arrow5"
                    android:text=""
                    android:textColor="#a6a6a6"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="所在地区"
                    android:textColor="@color/c5cc"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/right_arrow7"
                    android:layout_width="@dimen/image_size_small"
                    android:layout_height="@dimen/image_size_small"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/right" />

                <TextView
                    android:id="@+id/store_suozaidiweishezhi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@id/right_arrow7"
                    android:layout_toRightOf="@+id/tx"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:singleLine="true"
                    android:text="未设置"
                    android:textColor="#a6a6a6"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/edit_dianputouxiang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="店铺头像"
                    android:textColor="@color/c5cc"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/right_arrow8"
                    android:layout_width="@dimen/image_size_small"
                    android:layout_height="@dimen/image_size_small"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/right" />

                <com.makeramen.roundedimageview.RoundedImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/store_dianputouxiang"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/right_arrow8"
                    android:padding="10dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/logo36"
                    app:riv_border_color="#0fffffff"
                    app:riv_corner_radius_bottom_left="10dp"
                    app:riv_corner_radius_bottom_right="10dp"
                    app:riv_corner_radius_top_left="10dp"
                    app:riv_corner_radius_top_right="10dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/change_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="修改密码"
                    android:textColor="@color/c5cc"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/xiugai_pass"
                    android:layout_width="@dimen/image_size_small"
                    android:layout_height="@dimen/image_size_small"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@mipmap/right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="@color/line" />

            <RelativeLayout
                android:id="@+id/clean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:text="清空缓存数据"
                    android:textColor="@color/red"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>